# portfolio

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  start.sh
app/: config.py  main.py
app/cli/: dev.py
app/services/: github_client.py
app/static/: cache.json  profile.yaml  summaries.json  thesis.yaml
backend/: main.py  requirements.txt  start.py
backend/services/: github_client.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/thesis/: page.tsx
frontend/src/components/: Navbar.tsx  RepoCard.tsx  RepoModal.tsx  ReposGrid.tsx  ThesisCard.tsx  theme-provider.tsx
frontend/src/lib/: backend.ts
scripts/: dev.py  kill-dev.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
ui/src/components/: Navbar.tsx  RepoCard.tsx  RepoModal.tsx  ReposGrid.tsx  Section.tsx  SiteNav.tsx  ThesisCard.tsx  theme-provider.tsx
ui/src/components/ui/: aspect-ratio.tsx  card.tsx  carousel.tsx  dialog.tsx  tooltip.tsx
ui/src/lib/: backend.ts
ui/src/pages/: Home.tsx  Thesis.tsx
ui/src/types/: react-markdown.d.ts
