[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
dev = "app.cli.dev:main"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
